# optik

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  example.py  flake.nix  optik.pyi  pyproject.toml
.github/workflows/: ci.yaml  python.yaml
benches/: bench.rs
crates/optik/: Cargo.toml
crates/optik-cpp/: CMakeLists.txt  Cargo.toml  build.rs
crates/optik-cpp/cmake/: optikConfig.cmake.in
crates/optik-cpp/include/: optik.hpp
crates/optik-cpp/src/: lib.cpp  lib.rs
crates/optik-py/: Cargo.toml
crates/optik-py/src/: lib.rs
crates/optik/benches/: bench.rs
crates/optik/src/: config.rs  kinematics.rs  lib.rs  math.rs  objective.rs
crates/optik/tests/: test_determinism.rs  test_fk.rs  test_gradient.rs  test_ik.rs  test_math.rs
crates/optik/tests/data/: test_fk_inputs.json  test_fk_outputs.json  test_math_inputs.json  test_math_outputs_se3_log.json  test_math_outputs_se3_right_jacobian.json  test_math_outputs_so3_log.json  test_math_outputs_so3_right_jacobian.json  ur3e.urdf
crates/slsqp-sys/: Cargo.toml  build.rs
crates/slsqp-sys/src/: lib.rs
examples/: CMakeLists.txt  diff_ik.py  example.cpp  example.py  example.rs  example_diff_ik.py
slsqp-sys/: Cargo.toml  build.rs
slsqp-sys/src/: lib.rs
src/: config.rs  lib.rs  main.rs  py.rs
