[workspace]
resolver = "2"
members = [
  "crates/optik",
  "crates/optik-py",
  "crates/optik-cpp",
]

[workspace.package]
authors = ["Kyle Cesare <kcesare@gmail.com>"]
version = "0.5.0-beta.4"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
optik = { path = "crates/optik" }

# Solver
nalgebra = "0.33"
nlopt = { git = "https://github.com/kylc/rust-nlopt.git", branch = "optik-patches" }
ordered-float = "4.2"
petgraph = "0.7"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
urdf-rs = "0.9"

# Python
pyo3 = { version = "0.23", features = ["abi3-py38"] }

[workspace.lints.rust]
non_snake_case = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
