[workspace]
resolver = "2"
members = [
  "crates/optik",
  "crates/optik-py",
  "crates/optik-cpp",
]

[workspace.package]
authors = ["Kyle Cesare <kcesare@gmail.com>"]
version = "0.5.1+medra"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
