[package]
name = "optik-cpp"
authors = ["Kyle Cesare <kcesare@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "optikcpp"
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[dependencies]
nalgebra = "0.30"
optik = { path = "../optik" }
rand = "0.8"
