[package]
name = "optik-cpp"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "optikcpp"
crate-type = ["staticlib"]

[lints]
workspace = true

[dependencies]
nalgebra.workspace = true
optik.workspace = true
rand.workspace = true
