[package]
name = "optik"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "optik"
crate-type = ["rlib"]

[dependencies]
k = "0.31"
nalgebra = "0.30"
ordered-float = "4.2"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"
slsqp-sys = { path = "../slsqp-sys" }
urdf-rs = "0.8"

[[example]]
name = "example"
path = "../../examples/example.rs"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
nalgebra = { version = "0.30", features = [ "rand", "serde-serialize" ] }
serde = "1.0"
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false
