[package]
name = "optik"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "optik"
crate-type = ["rlib"]

[dependencies]
nalgebra = "0.32"
nlopt = { git = "https://github.com/kylc/rust-nlopt.git", branch = "optik-patches" }
ordered-float = "4.2"
petgraph = "0.6"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"
urdf-rs = "0.8"

[[example]]
name = "example"
path = "../../examples/example.rs"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
nalgebra = { version = "0.32", features = [ "rand", "serde-serialize" ] }
serde = "1.0"
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false
